--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,32 @@
+# Core Flask Framework
 flask
 Flask-SQLAlchemy
-mysqlclient
+flask-migrate
+
+# Authentication & Security
+flask-login
+flask-bcrypt
+itsdangerous
+
+# Forms & Validation
 flask-wtf
 email-validator
-flask-bcrypt
-flask-login
-Pillow
-itsdangerous
+
+# Email
 flask-mail
-pytz
-gunicorn
-wfastcgi
+
+# Database
 psycopg2-binary
+
+# Image Processing
+Pillow
+
+# Timezone Handling
+pytz
+
+# Production Server
+gunicorn
+
+# External Services (currently commented but imported)
 pika
 requests
-flask-migrate
