--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,4 +19,5 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
+            sudo chmod +x /opt/harithma-pos/deployment/update.sh
             sudo /opt/harithma-pos/deployment/update.sh
